Removed Cobertura test, refactored configuration and jar loading.